--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "yarn serve:dev",
     "serve": "yarn serve:dev",
-    "serve:dev": "vue-cli-service serve --mode development",
+    "serve:dev": "vue-cli-service serve --mode develop",
     "serve:test": "vue-cli-service serve --mode test",
     "serve:uat": "vue-cli-service serve --mode uat",
     "serve:prod": "vue-cli-service serve --mode production",
     "build": "yarn build:dev",
-    "build:dev": "vue-cli-service build --mode development",
+    "build:dev": "vue-cli-service build --mode develop",
     "build:test": "vue-cli-service build --mode test",
     "build:uat": "vue-cli-service build --mode uat",
     "build:prod": "vue-cli-service build --mode production",
