--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.26.5",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
