--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14",
