--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.0",
     "@types/nprogress": "^0.2.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
     "svg-sprite-loader": "^6.0.11",
